# backend/src/modules/auth/auth.routes.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
 import { authController } from "./auth.controller.js";
+import { requireAuth } from "../../middlewares/auth.middleware.js";
 
 const authRouter = Router();
 
 authRouter.post("/register", authController.register);
 authRouter.post("/login", authController.login);
+authRouter.get("/me", requireAuth, authController.me);
 
 export { authRouter };
