# backend/src/modules/users/users.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from "express";
 import { usersController } from "./users.controller.js";
-import { authMiddleware } from "../../middlewares/auth.middleware.js";
+import { requireAuth } from "../../middlewares/auth.middleware.js";
 
 const usersRouter = Router();
 
-usersRouter.get("/me", authMiddleware, usersController.me);
+usersRouter.get("/me", requireAuth, usersController.me);
 
 export { usersRouter };
